--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Bundle-Test-SQL-Statement
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+1.33    2011-02-06
+        Releasing Bundle::Test::SQL::Statement first time to reduce
+	dependencies in SQL::Statement
 
